@@ -18,6 +18,7 @@ export(readModDNAStringSet)
 export(readModRNAStringSet)
 export(readQualityScaledModDNAStringSet)
 export(readQualityScaledModRNAStringSet)
+export(removeIncompatibleModifications)
 export(replaceLetterAt)
 export(sanitizeFromModomics)
 export(sanitizeFromtRNAdb)
@@ -50,6 +51,7 @@ exportMethods(hasOnlyBaseLetters)
 exportMethods(letterFrequency)
 exportMethods(modifyNucleotides)
 exportMethods(nomenclature)
+exportMethods(removeIncompatibleModifications)
 exportMethods(replaceLetterAt)
 exportMethods(separate)
 exportMethods(seqtype)
